test/good/strings/cmp04.px

print 'a' == "a", "b" != 'b'
print "ab" > 'a', "b" <= 'a'
print 'a' < "a", 'b' >= "b"
