test/bad/lambdas/call06.px

a = _!
b = a
b("")
